@@ -23,3 +23,11 @@ capplets/localization/localization.glade
 schemas/apps_gnome_settings_daemon_default_editor.schemas.in
 schemas/apps_gnome_settings_daemon_keybindings.schemas.in
 schemas/apps_gnome_settings_daemon_screensaver.schemas.in
+vfs-methods/themus/apply-font.glade
+vfs-methods/themus/theme-method.c
+vfs-methods/themus/theme-method.directory.in
+vfs-methods/themus/themus-properties-main.c
+vfs-methods/themus/themus-properties-view.c
+vfs-methods/themus/themus.schemas.in
+vfs-methods/themus/themus-theme-applier.c
+vfs-methods/themus/themus-theme-applier.desktop.in.in
